unpackaged/main/default/objects/Task__c/fields/Dropped_Objects__c.field-meta.xml
<CustomField>
    <fullName>Dropped_Objects__c</fullName>
    <label>Dropped Objects</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use signs and barriers to restrict entry or access underwork at elevation</fullName>
            </value>
            <value>
                <fullName>Use lifting equipment to raise tools to or from the work platform</fullName>
            </value>
            <value>
                <fullName>Secure tools (tie-off)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>