unpackaged/main/default/objects/Task__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <label>Form</label>
    <referenceTo>Form__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>