unpackaged/main/default/objects/Task__c/fields/Hazard_Control__c.field-meta.xml
<CustomField>
    <fullName>Hazard_Control__c</fullName>
    <label>Hazard Control</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>