unpackaged/main/default/objects/Task__c/fields/Hazardous_Substances__c.field-meta.xml
<CustomField>
    <fullName>Hazardous_Substances__c</fullName>
    <label>Hazardous Substances</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Drain or purge equipment</fullName>
            </value>
            <value>
                <fullName>Follow SDS controls</fullName>
            </value>
            <value>
                <fullName>Implement health hazard controls (Lead, Asbestos, Benzene, H2S, Iron Sulfide, Sulfur Dioxide, NORM)</fullName>
            </value>
            <value>
                <fullName>Test or analyze material</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>