unpackaged/main/default/objects/Task__c/fields/High_Energy_High_Voltage__c.field-meta.xml
<CustomField>
    <fullName>High_Energy_High_Voltage__c</fullName>
    <label>High Energy / High Voltage</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Restrict access to authorized personnel only</fullName>
            </value>
            <value>
                <fullName>Discharge equipment and make electrically dead</fullName>
            </value>
            <value>
                <fullName>Observe safe work distances for live cables</fullName>
            </value>
            <value>
                <fullName>Use flash burn PPE</fullName>
            </value>
            <value>
                <fullName>Use insulated gloves, tools, and mats, GFCI’s.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>