unpackaged/main/default/objects/Task__c/fields/High_Noise__c.field-meta.xml
<CustomField>
    <fullName>High_Noise__c</fullName>
    <label>High Noise</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Wear correct hearing PPE</fullName>
            </value>
            <value>
                <fullName>Manage exposure times</fullName>
            </value>
            <value>
                <fullName>Shut down equipment</fullName>
            </value>
            <value>
                <fullName>Use “quiet” tools</fullName>
            </value>
            <value>
                <fullName>Sound barriers or curtains</fullName>
            </value>
            <value>
                <fullName>Provide or use suitable communication techniques</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>