unpackaged/main/default/objects/Task__c/fields/Ignition_Sources__c.field-meta.xml
<CustomField>
    <fullName>Ignition_Sources__c</fullName>
    <label>Ignition Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Remove, isolate, or contain combustible materials</fullName>
            </value>
            <value>
                <fullName>Provide firefighting equipment and fire watch</fullName>
            </value>
            <value>
                <fullName>Implement abrasive blasting controls</fullName>
            </value>
            <value>
                <fullName>Conduct continuous gas testing</fullName>
            </value>
            <value>
                <fullName>Bond or earth for static electricity for cathodic protection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>