unpackaged/main/default/objects/Task__c/fields/Mobile_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Equipment__c</fullName>
    <label>Mobile Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assess equipment condition</fullName>
            </value>
            <value>
                <fullName>Implement controls on users or access</fullName>
            </value>
            <value>
                <fullName>Limit and monitor proximity to live equipment on users or access</fullName>
            </value>
            <value>
                <fullName>Manage overhead hazards</fullName>
            </value>
            <value>
                <fullName>Adhere to road / site rules</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>