unpackaged/main/default/objects/Task__c/fields/Personnel__c.field-meta.xml
<CustomField>
    <fullName>Personnel__c</fullName>
    <label>Personnel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perform induction or training for new workers</fullName>
            </value>
            <value>
                <fullName>Mentor / coach / supervise</fullName>
            </value>
            <value>
                <fullName>Verify competencies, skills and experience</fullName>
            </value>
            <value>
                <fullName>Address applicable limitations (fatigue, exhaustion)</fullName>
            </value>
            <value>
                <fullName>Manage language barriers</fullName>
            </value>
            <value>
                <fullName>Seat belts while driving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>