unpackaged/main/default/objects/Task__c/fields/Poor_Lighting_Visibility__c.field-meta.xml
<CustomField>
    <fullName>Poor_Lighting_Visibility__c</fullName>
    <label>Poor Lighting / Visibility</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provide alternate lighting</fullName>
            </value>
            <value>
                <fullName>Wait or defer until visibility improves</fullName>
            </value>
            <value>
                <fullName>Defer until visibility improves</fullName>
            </value>
            <value>
                <fullName>Know distance from poles and other equipment while driving</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>