unpackaged/main/default/objects/Task__c/fields/Portable_Electrical_Equipment__c.field-meta.xml
<CustomField>
    <fullName>Portable_Electrical_Equipment__c</fullName>
    <label>Portable Electrical Equipment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inspect equipment and tools for condition and test date currency</fullName>
            </value>
            <value>
                <fullName>Implement continuous gas testing</fullName>
            </value>
            <value>
                <fullName>Protect electrical leads from impact or damage</fullName>
            </value>
            <value>
                <fullName>Identify equip. classification</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>