unpackaged/main/default/objects/Task__c/fields/Slips_Trips_and_Falls__c.field-meta.xml
<CustomField>
    <fullName>Slips_Trips_and_Falls__c</fullName>
    <label>Slips, Trips, and Falls</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Identify and shield uneven surface or projections</fullName>
            </value>
            <value>
                <fullName>Flag hazards as necessary</fullName>
            </value>
            <value>
                <fullName>Secure or cover cables, cords, and tubing</fullName>
            </value>
            <value>
                <fullName>Clean up liquids</fullName>
            </value>
            <value>
                <fullName>Barricade or rope off openings and holes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>