unpackaged/main/default/objects/Task__c/fields/Stop_the_Job__c.field-meta.xml
<CustomField>
    <fullName>Stop_the_Job__c</fullName>
    <label>Stop the Job</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>