unpackaged/main/default/objects/Task__c/fields/Task_Step_1__c.field-meta.xml
<CustomField>
    <fullName>Task_Step_1__c</fullName>
    <label>Task Step</label>
    <type>TextArea</type>
</CustomField>