unpackaged/main/default/objects/Task__c/fields/Task_Step__c.field-meta.xml
<CustomField>
    <fullName>Task_Step__c</fullName>
    <label>Task Step</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>