unpackaged/main/default/objects/Task__c/fields/Update_JSA__c.field-meta.xml
<CustomField>
    <fullName>Update_JSA__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Update JSA</label>
    <type>Checkbox</type>
</CustomField>