unpackaged/main/default/objects/Task__c/fields/Weather__c.field-meta.xml
<CustomField>
    <fullName>Weather__c</fullName>
    <label>Weather</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Implement controls for slippery surfaces</fullName>
            </value>
            <value>
                <fullName>Heat – hydration, breaks</fullName>
            </value>
            <value>
                <fullName>Cold – PPE, heaters</fullName>
            </value>
            <value>
                <fullName>Lightning – tool selection, defer work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>