unpackaged/main/default/objects/Task__c/fields/Work_at_Heights__c.field-meta.xml
<CustomField>
    <fullName>Work_at_Heights__c</fullName>
    <label>Work at Heights</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discuss working at heights safe work practice</fullName>
            </value>
            <value>
                <fullName>Verify fall restraint and arrest equipment certification</fullName>
            </value>
            <value>
                <fullName>Full body harness is required</fullName>
            </value>
            <value>
                <fullName>Locking type snaphooks must be used</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>